overflow fix and comodin done

--- a/styles.css
+++ b/styles.css
@@ -295,7 +295,7 @@ main{
     width: 90%;
     min-width: 248px;
     max-width: 400px;
-    height: 180px;
+    min-height: 160px;
     margin: 15px auto;
     padding: 15px;
     background-color: var(--warm-black);
@@ -341,4 +341,20 @@ main{
     font-weight: 500px;
     line-height: 1.8rem;
     color: #808080;
+}
+
+.bitcoin-img-container{
+    width: 100%;
+    min-height: 320px;
+    height: 50vh;
+    background: url(./assets/imgs/bitcoinbaby3x.jpg) center/cover no-repeat;
+    text-align: center;
+}
+
+.bitcoin-img-container h2{
+    padding-top: 60px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
 }
